# news-topic-classifier

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  compose.yml  pyproject.toml  setup_structure.ps1
.github/workflows/: build.yml  integration_test.yml  promote.yml  run_inference_pipeline.yml  run_pipeline.yml  test.yml
api/: Dockerfile  main.py  predictor.py
conf/: config.yaml
conf/data/: default.yaml
conf/environment/: dev.yaml  local.yaml  pp.yaml  prd.yaml
conf/model/: default.yaml
conf/training/: default.yaml
dashboard/: Dockerfile  app.py  bq_queries.py  requirements.txt
docker/base/: Dockerfile
docker/trainer/: Dockerfile
news_topic_classifier/: config.py  dataset.py  features.py
news_topic_classifier/modeling/: bert_classifier.py  predict.py  report.py  train.py
notebooks/: 1.0-eda-bbc-dataset.ipynb  2.0-bert-baseline-experiment.ipynb  3.0-error-analysis.ipynb
pipelines/: inference_pipeline.py  run_inference_pipeline.py  run_pipeline.py  training_pipeline.py
pipelines/components/: evaluate.py  extract.py  fetch_inference_data.py  predict.py  preprocess.py  register_model.py  run_batch_inference.py  train.py  write_inference_results.py
reports/: test_predictions.csv
requirements/: api.txt  base.txt  dashboard.txt  dev.txt  lint.txt  test.txt
scripts/: batch_predict.py  register_model.py
tests/: conftest.py
tests/integration/: conftest.py  test_inference_pipeline.py  test_pipeline.py
tests/unit/: test_bq_queries.py  test_config.py  test_dashboard_helpers.py  test_dataset.py  test_features.py  test_inference_components.py  test_model.py  test_pipeline_definitions.py  test_predictor.py  test_register_model.py  test_report.py  test_run_scripts.py  test_training_components.py
